# lumen

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: jit.yml  nightly.yml  pages.yml  release-plz.yml  release.yml  scripts.yml
crates/lumen/: CHANGELOG.md  Cargo.toml
crates/lumen-cli/: Cargo.toml  build.rs
crates/lumen-cli/src/: main.rs
crates/lumen-cli/tests/: cluster.rs  fork.rs  stdin.rs  typescript.rs
crates/lumen-difftest/: Cargo.toml
crates/lumen-difftest/src/: main.rs
crates/lumen-fs/: Cargo.toml
crates/lumen-fs/src/: lib.rs
crates/lumen-host/: Cargo.toml
crates/lumen-host/src/: brotli.rs  deflate.rs  lib.rs  tests.rs  zstd.rs
crates/lumen-node/: Cargo.toml  build.rs
crates/lumen-node/src/: bunhash.rs  child.rs  crypto.rs  dns.rs  dylib.rs  ffi.rs  lib.rs  napi.rs  net.rs  sqlite.rs  tls.rs
crates/lumen-node/src/js/: buffer.js  bun.js  bun_cookies.js  bun_ffi.js  bun_jsc.js  bun_mysql.js  bun_postgres.js  bun_redis.js  bun_router.js  bun_s3.js  bun_sql.js  bun_sqlite.js  child_process.js  cluster.js  console.js  constants.js  crypto.js  dgram.js  diagnostics_channel.js  dns.js  domain.js  events.js  fs.js  http.js  http2.js  http2_codec.js  http2_huffman.js  module.js  net.js  os.js  path.js  preamble.js  punycode.js  repl.js  shims.js  stdlib_extras.js  stream.js  timers.js  tls.js  trace_events.js  (+6 more)
crates/lumen-node/src/password/: constants.rs  mod.rs
crates/lumen-node/tests/fixtures/: bun_hash_oracle.txt  gen_bun_hash_oracle.js
crates/lumen-repl/: Cargo.toml
crates/lumen-repl/src/: lib.rs  tests.rs
crates/lumen-runtime/: Cargo.toml
crates/lumen-runtime/benches/: runtime.rs
crates/lumen-runtime/src/: console.rs  crypto_asym_tests.rs  esm.rs  jsx.rs  lib.rs  process.rs  tests.rs  worker.rs
crates/lumen-runtime/tests/: brotli.rs  bun_cookies.rs  bun_csrf.rs  bun_editor.rs  bun_ffi.rs  bun_mysql.rs  bun_plugin.rs  bun_postgres.rs  bun_redis.rs  bun_router.rs  bun_s3.rs  bun_secrets.rs  bun_sockets.rs  bun_sql.rs  crypto_primes.rs  crypto_rsa_padding.rs  crypto_spkac.rs  dgram_buffers.rs  dh.rs  ecdh.rs  ecdsa.rs  fs_ownership.rs  http2_client.rs  http2_codec.rs  http2_secure_client.rs  http2_server.rs  net_dgram.rs  password.rs  repl.rs  stream_semantics.rs  tls_server.rs  tty.rs  typescript_strip.rs  wasi.rs  worker_threads.rs  x509.rs  zstd.rs
crates/lumen-runtime/tests/fixtures/: bun_sqlite_oracle.expected.txt  bun_sqlite_oracle.js
crates/lumen-timers/: Cargo.toml
crates/lumen-timers/src/: lib.rs
crates/lumen-tls/: Cargo.toml
crates/lumen-tls/src/: lib.rs
crates/lumen-typescript/: Cargo.toml
crates/lumen-typescript/src/: lib.rs
crates/lumen-wasm/: Cargo.toml
crates/lumen-wasm/src/: lib.rs
crates/lumen-web/: Cargo.toml  build.rs
crates/lumen-web/src/: http.rs  lib.rs  server.rs  sha1.rs  sha256.rs  sse.rs  url.rs  wasm_ops.rs  websocket.rs
crates/lumen-web/src/js/: blob.js  compression.js  crypto.js  encoding.js  events.js  eventsource.js  fetch.js  messaging.js  platform.js  preamble.js  serialize.js  server.js  streams.js  url.js  urlpattern.js  wasm.js  websocket.js  writable.js
crates/lumen-web/src/wasm/: exec.rs  mod.rs  parse.rs
crates/lumen/benches/: engine.rs  internals.rs
crates/lumen/benches/support/: harness.rs
crates/lumen/src/: ast.rs  bigint.rs  bytecode.rs  cldr_dates.rs  cldr_likely.rs  cldr_units.rs  coroutine.rs  eval.rs  fastalloc.rs  fasthash.rs  host.rs  interpreter.rs  intl.rs  jit.rs  jit_x64.rs  jstr.rs  lexer.rs  lib.rs  lstr.rs  modules.rs  numbering.rs  parser.rs  regex.rs  regex_emoji.rs  regex_fold.rs  snapshot.rs  temporal.rs  tests.rs  token.rs  tz.rs  tzdata.rs  umalqura.rs  unicode_norm.rs  unicode_norm_impl.rs  unicode_props.rs  units.rs  value.rs
crates/lumen/src/builtins/: atomics.rs  collections.rs  dataview.rs  date.rs  disposable.rs  errors.rs  function_proto.rs  globals.rs  host.rs  json.rs  math.rs  mod.rs  primitives.rs  promise.rs  proxy.rs  reflect.rs  regexp.rs  shadowrealm.rs  typedarray.rs  weakrefs.rs
crates/lumen/src/intl/: collator.rs  data.rs  datetimeformat.rs  displaynames.rs  durationformat.rs  listformat.rs  locale.rs  numberformat.rs  pluralrules.rs  relativetimeformat.rs  segmenter.rs  service.rs  tags.rs
crates/lumen/src/intl/tags/: aliases.rs
crates/test262-runner/src/: frontmatter.rs  main.rs
examples/djot-parser/: README.md  package-lock.json  package.json  parse.mjs
examples/ejs/: README.md  bench.sh  fetch.sh
examples/express-app/: README.md  app.js  package-lock.json  package.json  server.js
examples/h3-server/: README.md  package-lock.json  package.json  server.mjs
examples/hono-app/: README.md  ant-style.js  app.js  bench.mjs  cold-start-server.js  cold-start.py  package-lock.json  package.json  repro-async-body-corruption.mjs  serve-http.js  serve.js
examples/ky-client/: README.md  main.mjs  package-lock.json  package.json
examples/native-addon/: .gitignore  README.md  addon.c  build.sh  main.js
examples/preact-ssr/: README.md  package-lock.json  package.json  server.mjs
examples/react-jsx-ssr/: .gitignore  README.md  app.jsx  app.tsx  package-lock.json  package.json  render.mjs
examples/react-ssr/: README.md  package-lock.json  package.json  server.js
examples/vite-app/: README.md  index.html  main.js  package-lock.json  package.json
examples/wintertc-showcase/: README.md  showcase.mjs
scripts/: bench-compare.sh  gen-cldr-units.py  install.sh  run-ares6.sh  run-ares6.test.sh  run-benches.sh  run-octane.sh  run-octane.test.sh  run-v8bench.sh  run-web-tooling.sh  run-web-tooling.test.sh
site/: index.html  worker.js
