# The interactive shell over lumen-runtime: persistent realm, real incomplete-input detection
# (the parser's at_eof flag, not brace counting), loop-to-quiescence between inputs, top-level
# await, `_`, dot commands. Line-buffered on purpose: raw-mode editing needs termios, which
# pure std can't do — use rlwrap for history/arrows until that's explicitly authorized.
[package]
name = "lumen-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
lumen-host = { path = "../lumen-host" }
lumen-runtime = { path = "../lumen-runtime" }

[lints]
workspace = true
